# bsvlake-blockarchive

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
src/: block_archive.rs  lib.rs  result.rs  sfb_archive.rs
testdata/blockarchive/: README
