[package]
name = "bsvlake-blockarchive"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>"
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/bsvlake-blockarchive/"
repository = "https://github.com/Danconnolly/bsvlake-blockarchive/"
description = "A block archive for Bitcoin SV"
keywords = ["bitcoin-sv", "blockchain", "storage"]
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
bitcoinsv = "0.4.0"
bytes = "1.10.1"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"